--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "eslint-loader": "^3.0.3",
     "laravel-mix": "^5.0.1",
     "lodash.debounce": "^4.0.8",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
