--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.2.4",
   "description": "Ash's Smooth Scroll",
   "main": "src/index.js",
+  "files": [
+    "src",
+    "css",
+    "dist"
+  ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
