--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
   },
   "homepage": "https://github.com/ashthornton-gc/asscroll#readme",
   "devDependencies": {
-    "@unseenco/e": "^1.3.6",
     "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "laravel-mix": "^5.0.1",
-    "lodash.debounce": "^4.0.8",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "dependencies": {
+    "@unseenco/e": "^1.3.6",
+    "lodash.debounce": "^4.0.8"
   }
 }
