--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "@ashthornton/asscroll",
   "version": "1.2.7",
   "description": "Ash's Smooth Scroll",
-  "main": "src/index.js",
+  "main": "build/asscroll.js",
+  "unpkg": "build/asscroll.min.js",
   "files": [
     "src",
     "css",
-    "dist"
+    "build"
   ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules"
   },
   "repository": {
     "type": "git",
@@ -28,15 +28,18 @@
   },
   "homepage": "https://github.com/ashthornton-gc/asscroll#readme",
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "laravel-mix": "^5.0.1",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "@babel/core": "7.5.4",
+    "@babel/preset-env": "7.5.4",
+    "@babel/register": "7.4.4",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.1.4",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.0.1",
+    "eslint-loader": "^2.2.1",
+    "regenerator-runtime": "^0.13.2",
+    "terser-webpack-plugin": "^3.0.1",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
     "@unseenco/e": "^1.3.6",
