--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ash's Smooth Scroll",
   "main": "build/asscroll.js",
   "unpkg": "build/asscroll.min.js",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "files": [
     "src",
     "css",
@@ -15,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ashthornton-gc/asscroll.git"
+    "url": "git+https://github.com/ashthornton/asscroll.git"
   },
   "keywords": [
     "smooth",
@@ -24,9 +25,9 @@
   "author": "Ash Thornton",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ashthornton-gc/asscroll/issues"
+    "url": "https://github.com/ashthornton/asscroll/issues"
   },
-  "homepage": "https://github.com/ashthornton-gc/asscroll#readme",
+  "homepage": "https://github.com/ashthornton/asscroll#readme",
   "devDependencies": {
     "@babel/core": "7.5.4",
     "@babel/preset-env": "7.5.4",
