--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run production"
+      "pre-push": "npm run production && git add -A && git commit -m \"build\""
     }
   },
   "repository": {
