--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
   ],
   "scripts": {
     "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run production && git add -A && git commit -m \"build\""
-    }
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules",
+    "postpublish": "git push origin --all; git push origin --tags",
+    "postversion": "npm publish",
+    "preversion": "npm run production"
   },
   "repository": {
     "type": "git",
@@ -44,7 +42,6 @@
     "cross-env": "^7.0.2",
     "eslint": "^6.0.1",
     "eslint-loader": "^2.2.1",
-    "husky": "^4.2.5",
     "regenerator-runtime": "^0.13.2",
     "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.35.3",
