--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules",
     "postpublish": "git push origin --all; git push origin --tags",
-    "postversion": "npm publish",
+    "postversion": "npm publish --access public",
     "preversion": "npm run production"
   },
   "repository": {
