--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ashthornton/asscroll",
-  "version": "1.8.0-beta.0",
+  "version": "1.8.0-beta.1",
   "description": "Ash's Smooth Scroll",
   "main": "build/asscroll.js",
   "unpkg": "build/asscroll.min.js",
@@ -11,10 +11,7 @@
   ],
   "scripts": {
     "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules",
-    "postpublish": "git push origin master && git push origin --tags",
-    "postversion": "npm publish --access public",
-    "preversion": "npm run production && git add -A && git commit -m build"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules"
   },
   "repository": {
     "type": "git",
