update event name structure

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,137 +1,27 @@
 {
-  "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true,
-        "globalReturn": true,
-        "impliedStrict": true
-      }
-    },
-    "env": {
-      "es6": true,
-      "amd": true,
-      "node": true,
-      "mocha": true,
-      "worker": true,
-      "jquery": true,
+  "parser": "babel-eslint",
+  "extends": "standard",
+  "env": {
       "browser": true,
       "commonjs": true,
-      "serviceworker": true,
-      "shared-node-browser": true
-    },
-    "globals": {
-      "Store": true
-    },
-    "rules": {
-    "array-callback-return": "warn",
-    "default-case": ["warn", { "commentPattern": "^no default$" }],
-    "dot-location": ["warn", "property"],
-    "eqeqeq": ["warn", "allow-null"],
-    "new-parens": "warn",
-    "no-array-constructor": "warn",
-    "no-caller": "warn",
-    "no-cond-assign": ["warn", "always"],
-    "no-const-assign": "warn",  
-    "no-control-regex": "warn",
-    "no-delete-var": "warn",
-    "no-dupe-args": "warn",
-    "no-dupe-class-members": "warn",
-    "no-dupe-keys": "warn",
-    "no-duplicate-case": "warn",
-    "no-empty-character-class": "warn",
-    "no-empty-pattern": "warn",
-    "no-eval": "warn",
-    "no-ex-assign": "warn",
-    "no-extend-native": "warn",
-    "no-extra-bind": "warn",
-    "no-extra-label": "warn",
-    "no-fallthrough": "warn",
-    "no-func-assign": "warn",
-    "no-implied-eval": "warn",
-    "no-invalid-regexp": "warn",
-    "no-iterator": "warn",
-    "no-label-var": "warn",
-    "no-labels": ["warn", { "allowLoop": false, "allowSwitch": false }],
-    "no-lone-blocks": "warn",
-    "no-loop-func": "warn",
-    "no-mixed-operators": [
-      "warn",
-      {
-        "groups": [
-          ["&", "|", "^", "~", "<<", ">>", ">>>"],
-          ["==", "!=", "===", "!==", ">", ">=", "<", "<="],
-          ["&&", "||"],
-          ["in", "instanceof"]
-        ],
-        "allowSamePrecedence": false
-      }
-    ],
-    "no-multi-str": "warn",
-    "no-native-reassign": "warn",
-    "no-negated-in-lhs": "warn",
-    "no-new-func": "warn",
-    "no-new-object": "warn",
-    "no-new-symbol": "warn",
-    "no-new-wrappers": "warn",
-    "no-obj-calls": "warn",
-    "no-octal": "warn",
-    "no-octal-escape": "warn",
-    "no-redeclare": "warn",
-    "no-regex-spaces": "warn",
-    "no-restricted-syntax": ["warn", "LabeledStatement", "WithStatement"],
-    "no-script-url": "warn",
-    "no-self-assign": "warn",
-    "no-self-compare": "warn",
-    "no-sequences": "warn",
-    "no-shadow-restricted-names": "warn",
-    "no-sparse-arrays": "warn",
-    "no-template-curly-in-string": "warn",
-    "no-this-before-super": "warn",
-    "no-throw-literal": "warn",
-    "no-undef": "error",
-    "no-restricted-globals": ["error", "event"],
-    "no-unexpected-multiline": "warn",
-    "no-unreachable": "warn",
-    "no-unused-expressions": [
-      "warn",
-      {
-        "allowShortCircuit": true,
-        "allowTernary": true
-      }
-    ],
-    "no-unused-labels": "warn",
-    "no-unused-vars": [
-      "warn",
-      {
-        "vars": "local",
-        "varsIgnorePattern": "^_",
-        "args": "none",
-        "ignoreRestSiblings": true
-      }
-    ],
-    "no-use-before-define": ["warn", "nofunc"],
-    "no-useless-computed-key": "warn",
-    "no-useless-concat": "warn",
-    "no-useless-constructor": "warn",
-    "no-useless-escape": "warn",
-    "no-useless-rename": [
-      "warn",
-      {
-        "ignoreDestructuring": false,
-        "ignoreImport": false,
-        "ignoreExport": false
-      }
-    ],
-    "no-with": "warn",
-    "no-whitespace-before-property": "warn",
-    "operator-assignment": ["warn", "always"],
-    "radix": "warn",
-    "require-yield": "warn",
-    "rest-spread-spacing": ["warn", "never"],
-    "strict": ["warn", "never"],
-    "unicode-bom": ["warn", "never"],
-    "use-isnan": "warn",
-    "valid-typeof": "warn"
+      "es6": true,
+      "node": true
+  },
+  "globals": {
+      "store": true
+  },
+  "rules": {
+      "no-tabs": "off",
+      "indent": ["error", "tab", {
+    "SwitchCase": 1
+  }],
+      "eol-last": "off",
+      "quotes": "off",
+      "no-floating-decimal": "off",
+      "space-before-function-paren": ["error", {
+          "anonymous": "ignore",
+          "named": "never",
+          "asyncArrow": "always"
+      }]
   }
 }
