--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules",
     "postpublish": "git push origin master && git push origin --tags",
     "postversion": "npm publish --access public",
-    "preversion": "npm run production && git add -A && git commit -m build"
+    "preversion": "npm run production && git add -A && git commit -m build",
+    "fix": "eslint --fix \"src/**\""
   },
   "repository": {
     "type": "git",
@@ -31,14 +32,20 @@
   },
   "homepage": "https://github.com/ashthornton/asscroll#readme",
   "devDependencies": {
-    "@babel/core": "7.5.4",
-    "@babel/preset-env": "7.5.4",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.0",
     "@babel/register": "7.4.4",
-    "babel-loader": "^8.0.6",
-    "core-js": "^3.1.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.11.1",
     "cross-env": "^7.0.2",
-    "eslint": "^6.0.1",
-    "eslint-loader": "^2.2.1",
+    "eslint": "^7.25.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-webpack-plugin": "^2.4.3",
     "regenerator-runtime": "^0.13.2",
     "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.35.3",
