--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-webpack-plugin": "^2.4.3",
+    "jsdoc-to-markdown": "^7.0.1",
     "regenerator-runtime": "^0.13.2",
     "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.35.3",
