--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "postpublish": "git push origin master && git push origin --tags",
     "postversion": "npm publish --access public",
     "preversion": "npm run production && git add -A && git commit -m build",
-    "fix": "eslint --fix \"src/**\""
+    "fix": "eslint --fix \"src/**\"",
+    "docs": "jsdoc2md src/index.js > test.md --template README.hbs --heading-depth 1"
   },
   "repository": {
     "type": "git",
