--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build"
   ],
   "scripts": {
-    "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules",
+    "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress",
     "postpublish": "git push origin master && git push origin --tags",
     "postversion": "npm publish --access public",
     "preversion": "npm run production && git add -A && git commit -m build",
@@ -24,7 +24,8 @@
   },
   "keywords": [
     "smooth",
-    "scroll"
+    "scroll",
+    "smooth-scroll"
   ],
   "author": "Ash Thornton",
   "license": "MIT",
@@ -35,7 +36,6 @@
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
-    "@babel/register": "7.4.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "core-js": "^3.11.1",
@@ -48,10 +48,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-webpack-plugin": "^2.4.3",
     "jsdoc-to-markdown": "^7.0.1",
-    "regenerator-runtime": "^0.13.2",
-    "terser-webpack-plugin": "^3.0.1",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.6"
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0"
   },
   "dependencies": {
     "@unseenco/e": "^1.7.0"
