--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ashthornton/asscroll",
   "version": "2.0.0-beta.7",
   "description": "Ash's Smooth Scroll",
-  "main": "build/asscroll.js",
+  "main": "src/index.js",
   "unpkg": "build/asscroll.min.js",
   "files": [
     "src",
@@ -22,7 +22,8 @@
   "keywords": [
     "smooth",
     "scroll",
-    "smooth-scroll"
+    "smooth-scroll",
+    "smooth scroll"
   ],
   "author": "Ash Thornton",
   "license": "MIT",
