bring back package version scripts

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress",
+    "postpublish": "git push origin master && git push origin --tags",
+    "postversion": "npm publish --access public",
+    "preversion": "npm run production && git add -A && git commit -m build",
     "fix": "eslint --fix \"src/**\"",
     "docs": "jsdoc2md src/index.js > README.md --template docs/README.hbs --heading-depth 1 --partial docs/scope.hbs",
     "types": "typescript src/index.js --allowJs --declaration --emitDeclarationOnly --outDir types --lib es2015"
