--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
-    "@unseenco/e": "^1.8.2"
-  }
+    "@unseenco/e": "^2.2.2"
+  },
+  "browserslist": "last 2 versions and >=1% or safari >13 or last 6 ios_saf versions"
 }
